--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wizzy",
+  "name": "vedlly-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,14 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "~5.0.1",
-    "dotenv": "~10.0.0",
-    "express": "~4.17.1",
-    "joi": "~13.7.0",
-    "joi-objectid": "~3.0.1",
-    "joi-password-complexity": "~2.0.1",
-    "jsonwebtoken": "~8.5.1",
-    "lodash": "~4.17.21",
-    "mongoose": "~5.0.2"
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "joi": "^13.7.0",
+    "joi-objectid": "^3.0.1",
+    "joi-password-complexity": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.0.2"
   }
 }
